--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <meta name="googlebot" content="index,follow" />
 
       <meta http-equiv="x-ua-compatible" content="ie=edge" />
-      <meta name="msapplication-TileColor" content="#000000" />
+      <meta name="theme-color" content="#fffff">
+      <meta name="msapplication-TileColor" content="#fffff" />
       <meta name="msapplication-TileImage" content="/img/icon/favicon-270x270" />
 
       <!-- Подключенные стили -->
@@ -30,6 +31,7 @@
       <link rel="apple-touch-icon" href="/img/icon/favicon-60x60.png" type="image/png" sizes="60x60" />
       <link rel="apple-touch-icon" href="/img/icon/favicon-76x76.png" type="image/png" sizes="76x76" />
       <link rel="apple-touch-icon" href="/img/icon/favicon-152x152.png" type="image/png" sizes="152x152" />
+      <link rel="apple-touch-icon" href="/img/icon/favicon-512x512.png" type="image/png" sizes="512x512" />
       <link rel="apple-touch-startup-image" href="/img/icon/favicon-start.png" type="image/png" />
 
       <!-- Подключенный манифест -->
