Update theem color

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <meta name="googlebot" content="index,follow" />
 
       <meta http-equiv="x-ua-compatible" content="ie=edge" />
-      <meta name="theme-color" content="#fffff">
-      <meta name="msapplication-TileColor" content="#fffff" />
+      <meta name="theme-color" content="#ffffff">
+      <meta name="msapplication-TileColor" content="#ffffff" />
       <meta name="msapplication-TileImage" content="/img/icon/favicon-270x270" />
 
       <!-- Подключенные стили -->
