--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 
       <!-- Подключаем фавиконы  -->
       <link rel="shortcut icon" href="/img/icon/favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="/img/icon/favicon-512x512.png" type="image/png" sizes="512x512" />
+      <link rel="icon" href="/img/icon/favicon-512x512.png" type="image/png" sizes="12x512">
       <link rel="apple-touch-icon" href="/img/icon/favicon-60x60.png" type="image/png" sizes="60x60" />
       <link rel="apple-touch-icon" href="/img/icon/favicon-76x76.png" type="image/png" sizes="76x76" />
       <link rel="apple-touch-icon" href="/img/icon/favicon-152x152.png" type="image/png" sizes="152x152" />
-      <link rel="apple-touch-icon" href="/img/icon/favicon-512x512.png" type="image/png" sizes="512x512" />
       <link rel="apple-touch-startup-image" href="/img/icon/favicon-start.png" type="image/png" />
 
       <!-- Подключенный манифест -->
