Update manifest and html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <link rel="stylesheet" href="/css/quaires.min.css" media="print" onload="this.media='all'" type="text/css" />
 
       <!-- Подключаем фавиконы  -->
-      <link rel="shortcut icon" href="/img/icon/favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="/img/icon/favicon.ico" type="image/x-icon" sizes="64x64" />
       <link rel="apple-touch-icon" href="/img/icon/favicon-60x60.png" type="image/png" sizes="60x60" />
       <link rel="apple-touch-icon" href="/img/icon/favicon-76x76.png" type="image/png" sizes="76x76" />
       <link rel="apple-touch-icon" href="/img/icon/favicon-152x152.png" type="image/png" sizes="152x152" />
