Update manifest.json and add service worker

--- a/index.html
+++ b/index.html
@@ -413,5 +413,8 @@
             <p class="footer__company">ООО «ТУДИЛАБ», ОГРН 1202500014573, ИНН 2537144032</p>
          </div>
       </footer>
+
+      <script src="/js/pwabuilder-sw.js" async></script>
+      <script src="/js/pwabuilder-sw-register.js" async></script>
    </body>
 </html>
