--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
 
       <!-- Подключенный манифест -->
       <link rel="manifest" href="manifest.json" />
-      <script type="module">
-         import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
-         const el = document.createElement('pwa-update');
-         document.body.appendChild(el);
-      </script>
+
 
       <!-- Опен граф мета теги -->
       <meta property="og:title" content="Teamlogs – онлайн транскрибация аудио и видео" />
@@ -418,5 +414,10 @@
             <p class="footer__company">ООО «ТУДИЛАБ», ОГРН 1202500014573, ИНН 2537144032</p>
          </div>
       </footer>
+      <script type="module" async>
+         import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
+         const el = document.createElement('pwa-update');
+         document.body.appendChild(el);
+      </script>
    </body>
 </html>
