Update html tag p>address for footer

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                      </ul>
                   </nav>
                   <div class="footer__text-box">
-                     <p class="footer__city">Санкт-Петербург — Владивосток</p>
+                     <address class="footer__city">Санкт-Петербург — Владивосток</address>
                      <p class="footer__copy">© 2dlab, 2021. Все права защищены.</p>
                   </div>
                </div>
